--- a/EjemploBD/nbproject/project.properties
+++ b/EjemploBD/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EjemploBD
-main.class=paquete01.Enlace
+main.class=VIEW.FormTestEstudiante
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
